name:                curryer
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ChrisPenner/curryer#readme
license:             BSD3
license-file:        LICENSE
author:              Chris Penner
maintainer:          christopher.penner@gmail.com
copyright:           2017 Chris Penner
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Web.Curryer
                       Web.Curryer.Handler
                       Web.Curryer.Response
                       Web.Curryer.Request
                       Web.Curryer.Internal.Utils
                       Web.Curryer.Types

  build-depends:       base >= 4.7 && < 5
                     , wai
                     , warp
                     , cookie
                     , mtl
                     , lens
                     , http-types
                     , bytestring
                     , text
                     , containers
                     , case-insensitive
                     , transformers
                     , regex-pcre
                     , safe
                     , blaze-html
                     , aeson
                     , either
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ChrisPenner/curryer
