name:                firefly-example
version:             0.1.0.0
synopsis:           A simple example using Firefly
-- description:
homepage:            https://github.com/ChrisPenner/Firefly#readme
license:             BSD3
license-file:        LICENSE
author:              Chris Penner
maintainer:          christopher.penner@gmail.com
copyright:           2017 Chris Penner
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable firefly-example-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                     , firefly
                     , text
                     , aeson
                     , blaze-html
                     , mtl
                     , wai
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ChrisPenner/Firefly
