name:                firefly
version:             0.1.0.0
synopsis:            A simple HTTP server framework
-- description:
homepage:            https://github.com/ChrisPenner/firefly#readme
license:             BSD3
license-file:        LICENSE
author:              Chris Penner
maintainer:          christopher.penner@gmail.com
copyright:           2017 Chris Penner
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Web.Firefly
                       Web.Firefly.Handler
                       Web.Firefly.Response
                       Web.Firefly.Request
                       Web.Firefly.Internal.Utils
                       Web.Firefly.Types

  build-depends:       base >= 4.7 && < 5
                     , wai
                     , warp
                     , cookie
                     , mtl
                     , http-types
                     , bytestring
                     , text
                     , containers
                     , case-insensitive
                     , transformers
                     , regex-pcre
                     , blaze-html
                     , aeson
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ChrisPenner/firefly
