name:                firefly
version:             0.1.1.0
synopsis:            A simple HTTP server framework
-- description:
homepage:            https://github.com/ChrisPenner/firefly#readme
license:             BSD3
license-file:        LICENSE
author:              Chris Penner
maintainer:          christopher.penner@gmail.com
copyright:           2017 Chris Penner
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with: GHC==8.2.1, GHC==8.0.2

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Web.Firefly
                       Web.Firefly.Handler
                       Web.Firefly.Response
                       Web.Firefly.Request
                       Web.Firefly.Internal.Utils
                       Web.Firefly.Types

  build-depends:       base >= 4.7 && < 5
                     , wai >= 3.2
                     , warp >= 3.2
                     , cookie >= 0.4.2
                     , mtl >= 2.2
                     , http-types >= 0.9
                     , bytestring >= 0.10
                     , text >= 1.2
                     , containers >= 0.5
                     , case-insensitive >= 1.2
                     , transformers >= 0.5
                     , regex-pcre >= 0.94
                     , blaze-html >= 0.9
                     , aeson >= 1.1
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ChrisPenner/firefly
